[package]
name = "heim-net"
version = "0.1.0-alpha.1"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
description = "Cross-platform network information"
keywords = ["heim", "system", "network", "connections", "nic"]
categories = ["os", "api-bindings"]
repository = "https://github.com/heim-rs/heim"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[dependencies]
heim-common = { version = "0.1.0-alpha.1", path = "../heim-common" }
cfg-if = "~0.1"
bitflags = "^1.0"
macaddr = "1.0"
libc = "~0.2"

[dev-dependencies]
heim-derive = { version = "0.1.0-alpha.1", path = "../heim-derive" }
version-sync = "0.8"

[target.'cfg(unix)'.dependencies]
nix = "0.17.0"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
