[package]
name = "heim-runtime"
version = "0.1.0-rc.1"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
description = "Runtime shims for heim crate"
keywords = ["heim", "runtime", "shim", "sync"]
categories = ["asynchronous", "os", "api-bindings"]
repository = "https://github.com/heim-rs/heim"
license = "Apache-2.0 OR MIT"

[dependencies]
futures = { version = "0.3", default-features = false, features = ["std"] }
#futures-lite = "1"
futures-timer = "3"
once_cell = "1"
smol = "1"

[dev-dependencies]
version-sync = "0.9"
rusty-fork = "0.3"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
